test-automation-toolkit version update. Enhancements in Engine related to remote execution

--- a/src/test/resources/android-config.properties
+++ b/src/test/resources/android-config.properties
@@ -1,15 +1,25 @@
 device.name=j7p7ushudybqaugm
-#device.name=Pixel 7 API 33
 platform.version=14.0
+sauce.device.name=j7p7ushudybqaugm
+sauce.platform.version=13.0
 app.package=com.makemytrip
 #app.activity=com.mmt.auth.login.ui.LoginActivity
 app.activity=com.mmt.travel.app.home.ui.SplashActivity
 app=src/test/resources/app/makemytrip-9-0-8.apk
 app.name=makemytrip-9-0-8.apk
 no.reset=false
+unicode.keyboard=true
+hide.keyboard=true
+session.creation.retry=2
 auto.grant.permissions=true
 auto.accept.alerts=true
+location.services=true
 disable.window.animation=true
 disable.android.watchers=true
 ignore.unimportant.views=true
 disable.notifications=true
+device.ready.timeout=300
+avd.launch.timeout=50000
+session.creation.timeout=600000
+app.wait.timeout=30000
+new.command.timeout=240
