--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -18,5 +18,8 @@ sauce.labs.access.key=${sauce.password}
 sauce.labs.build=test_build_001
 sauce.labs.name=Automation Test
 sauce.labs.device.orientation=PORTRAIT
+sauce.labs.test.name=Automation Test
+app.under.test=MakeMyTrip
+app.version=9.0.8
 
 implicit.wait=0
