--- a/src/test/resources/ios-config.properties
+++ b/src/test/resources/ios-config.properties
@@ -1,14 +1,24 @@
 device.name=iPhone 15
-#device.name=iPhone 15 Plus
+sauce.device.name=iPhone 15 Plus
 platform.version=17.2
+sauce.platform.version=17.2
 app.package=com.makemytrip
 #app.activity=com.mmt.auth.login.ui.LoginActivity
 app.activity=com.mmt.travel.app.home.ui.SplashActivity
 app=app/makemytrip-9-0-8.apk
 no.reset=false
+unicode.keyboard=true
+hide.keyboard=true
+session.creation.retry=2
 auto.grant.permissions=true
 auto.accept.alerts=true
+location.services=true
 disable.window.animation=true
 disable.android.watchers=true
 ignore.unimportant.views=true
 disable.notifications=true
+device.ready.timeout=300
+avd.launch.timeout=50000
+session.creation.timeout=600000
+app.wait.timeout=30000
+new.command.timeout=240
